# aiml-lab

./: .gitignore  0901AI231019_AtharvaVerma_advertising_linear_regression_analysis.ipynb  0901AI231019_AtharvaVerma_housing_linear_regression_analysis.ipynb  README.md  advertising_linear_regression_analysis.ipynb  pyproject.toml
.sisyphus/notepads/visual-engineering/: learnings.md
a3/: 0901AI231019_File1.py  0901AI231019_File2.py
a4/: churn_prediction_mlp.ipynb
assignment-part-a/code/: cnn_classifier.py  peak_finding.py
assignment-part-a/theory/: assignment_1.md
assignment-part-b/code/: kmeans_numpy.py  svm_classifier.py
assignment-part-b/theory/: assignment_2.md
