[project]
name = "aiml-lab"
version = "0.1.0"
description = "AI/ML lab experiments with linear regression"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pygame>=2.5.0",
    "tensorflow>=2.21.0",
    "jupyter>=1.1.1",
    "nbconvert>=7.17.0",
    "seaborn>=0.13.2",
]
